--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" /> </svg>
     </button>
       <div class="flex-none  bg-white border border-blue-300 rounded-full">
+
     <div class="dropdown">
       <div tabindex="0" role="button" class="btn btn-ghost btn-circle">
         <div class="indicator">
@@ -49,9 +50,12 @@
     </div>
    
   </div>
-      </ul>
+   <a class="btn bg-[#ABEF5F]  rounded-3xl ">Book Consult <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 bg-black p-1 rounded-3xl text-white ">
+  <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+</svg></a>
+      </ul> 
     </div>
-    <a class="btn btn-ghost text-xl font-extrabold "><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 bg-[#ABEF5F] p-1 rounded-3xl ">
+    <a class="  lg:text-xl font-extrabold "><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 bg-[#ABEF5F] p-1 rounded-3xl inline">
   <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
 </svg>
   Rinterio</a>
@@ -93,7 +97,7 @@
   </div>
   
    
-    <a class="btn bg-[#ABEF5F] rounded-3xl">Book Consult <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 bg-black p-1 rounded-3xl text-white ">
+    <a class="btn bg-[#ABEF5F] hidden lg:flex rounded-3xl ">Book Consult <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 bg-black p-1 rounded-3xl text-white ">
   <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
 </svg></a>
   </div>
