--- a/index.html
+++ b/index.html
@@ -104,7 +104,22 @@
 </div>
     </header>
     <main>
-      
+      <section>
+        <div>
+            <img src="assets/banner.png" alt="">
+            <div>
+                <h1 class="text-center text-2xl font-extrabold">A barn house of this design  has a striking appearance</h1>
+                <p class="text-center pt-4">
+                    The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.
+                </p>
+                <div class="flex justify-center mt-5">
+                <button class="bg-[#cbfc93] px-20 py-3 rounded-3xl">View Details <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 bg-[#ABEF5F] p-1 rounded-3xl inline">
+  <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+</svg></button>
+            </div>
+            </div>
+        </div>
+      </section>
   
 
 
