new section added

--- a/index.html
+++ b/index.html
@@ -106,19 +106,53 @@
     <main>
       <section>
         <div>
+          <div class="flex justify-center">
             <img src="assets/banner.png" alt="">
+            </div>
             <div>
-                <h1 class="text-center text-2xl font-extrabold">A barn house of this design  has a striking appearance</h1>
-                <p class="text-center pt-4">
+                <h1 class="text-center text-2xl font-extrabold lg:text-6xl lg:max-w-5xl lg:mx-auto">A barn house of this design  has a striking appearance</h1>
+                <p class="text-center pt-4 lg:pt-6 lg:max-w-5xl lg:mx-auto">
                     The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.
                 </p>
-                <div class="flex justify-center mt-5">
+                <div class="flex justify-center mt-5 lg:mt-8">
                 <button class="bg-[#cbfc93] px-20 py-3 rounded-3xl">View Details <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 bg-[#ABEF5F] p-1 rounded-3xl inline">
   <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
 </svg></button>
             </div>
             </div>
         </div>
+      </section>
+      <section>
+        <div class="hero bg-base-200 min-h-screen">
+  <div class="hero-content flex-col lg:flex-row-reverse">
+    <img
+      src="assets/Rectangle.png"
+      class="max-w-sm rounded-lg shadow-2xl"
+    />
+    <div>
+      <h1 class="text-5xl font-bold">We design thoughtful, liveable spaces</h1>
+      <p class="py-6">
+      The barn house captivates with its blend of rustic charm and 
+modern sophistication, featuring weathered wood, sleek metal accents.
+      </p>
+     
+      <div class="flex items-center bg-white p-6 rounded-lg">
+        <img  src="assets/commercial.png" alt="">
+        <div class="pl-6">
+        <h3>Commercial</h3>
+        <p >he barn house captivates with its blend of rustic charm and modern.</p>
+        </div>
+      </div>
+      <div class="flex items-center bg-white p-6 rounded-lg mt-4">
+        <img  src="assets/residential.png" alt="">
+        <div class="pl-6">
+        <h3>Residential</h3>
+        <p >The barn house captivates with its blend of rustic charm and modern..</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
       </section>
   
 
