--- a/index.html
+++ b/index.html
@@ -122,16 +122,20 @@
             </div>
         </div>
       </section>
-      <section>
+      <section class="mt-8">
         <div class="hero bg-base-200 min-h-screen">
-  <div class="hero-content flex-col lg:flex-row-reverse">
-    <img
+  <div class="hero-content flex-col-reverse lg:flex-row-reverse">
+    <img 
       src="assets/Rectangle.png"
-      class="max-w-sm rounded-lg shadow-2xl"
+      class="w-72 "
     />
     <div>
-      <h1 class="text-5xl font-bold">We design thoughtful, liveable spaces</h1>
-      <p class="py-6">
+      <button class="btn rounded-lg block mx-auto mt-7 "><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 inline">
+  <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+</svg>
+ About Us</button>
+      <h1 class="text-2xl font-bold text-center">We design thoughtful, liveable spaces</h1>
+      <p class="py-6 text-center">
       The barn house captivates with its blend of rustic charm and 
 modern sophistication, featuring weathered wood, sleek metal accents.
       </p>
@@ -139,14 +143,14 @@ modern sophistication, featuring weathered wood, sleek metal accents.
       <div class="flex items-center bg-white p-6 rounded-lg">
         <img  src="assets/commercial.png" alt="">
         <div class="pl-6">
-        <h3>Commercial</h3>
+        <h3 class="font-extrabold">Commercial</h3>
         <p >he barn house captivates with its blend of rustic charm and modern.</p>
         </div>
       </div>
       <div class="flex items-center bg-white p-6 rounded-lg mt-4">
         <img  src="assets/residential.png" alt="">
         <div class="pl-6">
-        <h3>Residential</h3>
+        <h3 class="font-extrabold">Residential</h3>
         <p >The barn house captivates with its blend of rustic charm and modern..</p>
         </div>
       </div>
