--- a/index.html
+++ b/index.html
@@ -127,14 +127,19 @@
   <div class="hero-content flex-col-reverse lg:flex-row-reverse">
     <img 
       src="assets/Rectangle.png"
-      class="w-72 "
+      class="w-72 lg:w-1/2 "
     />
     <div>
-      <button class="btn rounded-lg block mx-auto mt-7 "><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 inline">
+      <div class="hidden lg:block">
+      <img src="assets/Vector.png" alt="">
+      </div>
+      <div class="flex justify-center lg:justify-start">
+      <button class="btn rounded-lg  mt-7 "><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 inline">
   <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
 </svg>
  About Us</button>
-      <h1 class="text-2xl font-bold text-center">We design thoughtful, liveable spaces</h1>
+ </div>
+      <h1 class="text-2xl font-bold text-center lg:text-4xl   pt-4">We design thoughtful, liveable spaces</h1>
       <p class="py-6 text-center">
       The barn house captivates with its blend of rustic charm and 
 modern sophistication, featuring weathered wood, sleek metal accents.
@@ -157,6 +162,44 @@ modern sophistication, featuring weathered wood, sleek metal accents.
     </div>
   </div>
 </div>
+      </section >
+
+      <section class="bg-base-200">
+        <div>
+          <div class="bg-white">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 block mx-auto ">
+  <path stroke-linecap="round" stroke-linejoin="round" d="M7.5 8.25h9m-9 3H12m-9.75 1.51c0 1.6 1.123 2.994 2.707 3.227 1.129.166 2.27.293 3.423.379.35.026.67.21.865.501L12 21l2.755-4.133a1.14 1.14 0 0 1 .865-.501 48.172 48.172 0 0 0 3.423-.379c1.584-.233 2.707-1.626 2.707-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.394 48.394 0 0 0 12 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018Z" />
+</svg>
+          <h2 class="text-center text-4xl font-extrabold">235+</h2>
+          <p class="text-center">Happy Client Review</p>
+          </div>
+          <div class="bg-white">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 block mx-auto ">
+  <path stroke-linecap="round" stroke-linejoin="round" d="M7.5 8.25h9m-9 3H12m-9.75 1.51c0 1.6 1.123 2.994 2.707 3.227 1.129.166 2.27.293 3.423.379.35.026.67.21.865.501L12 21l2.755-4.133a1.14 1.14 0 0 1 .865-.501 48.172 48.172 0 0 0 3.423-.379c1.584-.233 2.707-1.626 2.707-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.394 48.394 0 0 0 12 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018Z" />
+</svg>
+          <h2 class="text-center text-4xl font-extrabold">235+</h2>
+          <p class="text-center">Happy Client Review</p>
+          </div>
+          <div class="bg-white">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 block mx-auto ">
+  <path stroke-linecap="round" stroke-linejoin="round" d="M7.5 8.25h9m-9 3H12m-9.75 1.51c0 1.6 1.123 2.994 2.707 3.227 1.129.166 2.27.293 3.423.379.35.026.67.21.865.501L12 21l2.755-4.133a1.14 1.14 0 0 1 .865-.501 48.172 48.172 0 0 0 3.423-.379c1.584-.233 2.707-1.626 2.707-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.394 48.394 0 0 0 12 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018Z" />
+</svg>
+          <h2 class="text-center text-4xl font-extrabold">235+</h2>
+          <p class="text-center">Happy Client Review</p>
+          </div>
+
+          <div class="bg-white">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 block mx-auto ">
+  <path stroke-linecap="round" stroke-linejoin="round" d="M7.5 8.25h9m-9 3H12m-9.75 1.51c0 1.6 1.123 2.994 2.707 3.227 1.129.166 2.27.293 3.423.379.35.026.67.21.865.501L12 21l2.755-4.133a1.14 1.14 0 0 1 .865-.501 48.172 48.172 0 0 0 3.423-.379c1.584-.233 2.707-1.626 2.707-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.394 48.394 0 0 0 12 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018Z" />
+</svg>
+          <h2 class="text-center text-4xl font-extrabold">235+</h2>
+          <p class="text-center">Happy Client Review</p>
+          </div>
+
+
+        </div>
+
+
       </section>
   
 
