--- a/index.html
+++ b/index.html
@@ -206,19 +206,20 @@ modern sophistication, featuring weathered wood, sleek metal accents.
 
 
       </section>
-      <section class="container mx-auto">
-        <div>
-            <div class="flex justify-center lg:justify-start">
+      <section class=" bg-[#fff0f7]">
+        <div class="container mx-auto">
+            <div class="flex justify-center lg:pt-20  ">
       <button class="btn rounded-2xl  mt-7 "><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 inline">
   <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
 </svg>
  About Us</button>
  </div>
           <div>
-            <h2 class="text-center text-2xl font-bold py-4">Our Works Process</h2>
-            <p class="text-center">The barn house captivates with its blend of rustic charm and  modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            <h2 class="text-center text-2xl font-bold py-4 lg:text-4xl lg:py-5">Our Works Process</h2>
+            <p class="text-center lg:max-w-2xl lg:block lg:mx-auto">The barn house captivates with its blend of rustic charm and  modern sophistication, featuring weathered wood, sleek metal accents.</p>
 
           </div>
+          <div class="grid lg:grid-cols-4 lg:pt-8">
           <div class="p-5">
           <div class="bg-[#E7C1D3] p-6 rounded-2xl">
             <img src="assets/concept.png" alt="">
@@ -248,6 +249,7 @@ modern sophistication, featuring weathered wood, sleek metal accents.
             <img src="assets/budget-planning.png" alt="">
             <h4 class="font-bold text-xl py-3">Budget Planning</h4>
             <p>The barn house captivates with its blend of rustic charm and modern.</p>
+          </div>
           </div>
           </div>
         </div>
