--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ modern sophistication, featuring weathered wood, sleek metal accents.
       </section >
 
       <section class="bg-[#fff0f7]  ">
-        <div class="p-5 grid lg:grid-cols-4  ">
+        <div class="p-5 grid lg:grid-cols-4  lg:pt-16 lg:container lg:mx-auto ">
           <div class="bg-white rounded-t-3xl lg:rounded-r-none lg:rounded-bl-3xl  pt-11">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 block mx-auto ">
   <path stroke-linecap="round" stroke-linejoin="round" d="M7.5 8.25h9m-9 3H12m-9.75 1.51c0 1.6 1.123 2.994 2.707 3.227 1.129.166 2.27.293 3.423.379.35.026.67.21.865.501L12 21l2.755-4.133a1.14 1.14 0 0 1 .865-.501 48.172 48.172 0 0 0 3.423-.379c1.584-.233 2.707-1.626 2.707-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.394 48.394 0 0 0 12 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018Z" />
