--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@ modern sophistication, featuring weathered wood, sleek metal accents.
           </div>
         </div>
       </section>
-      <section class="bg-[#fff0f7] ">
-        <div >
+      <section class="bg-[#fff0f7]  ">
+        <div class="container mx-auto">
            <div class="flex justify-center lg:pt-20  ">
       <button class="btn rounded-2xl  mt-7 "><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 inline">
   <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
@@ -267,19 +267,19 @@ modern sophistication, featuring weathered wood, sleek metal accents.
             <p class="text-center lg:max-w-2xl lg:block lg:mx-auto">The barn house captivates with its blend of rustic charm and  modern sophistication, featuring weathered wood, sleek metal accents.</p>
 
           </div>
-          <div class="py-4 px-5 grid lg:grid-cols-2" >
-          <div class=" rounded-2xl">
+          <div class="py-4 px-5 " >
+          <div class=" rounded-2xl lg:flex lg:justify-around lg:items-center lg:mt-14">
  
-              <div class="container mx-auto">
-                <div class="hero bg-white rounded-3xl lg:max-w-3xl">
-  <div class="hero-content flex-col pt-7 lg:flex-row-reverse">
+              <div class="container mx-auto ">
+                <div class="hero bg-white rounded-3xl  lg:max-w-3xl">
+  <div class="hero-content flex-col pt-7 lg:flex-row">
     <img
       src="assets/img1.png"
       class="max-w-sm rounded-lg "
     />
     <div>
-      <h1 class="text-xl font-bold">Commercial</h1>
-      <p class="py-6 max-w-72">
+      <h1 class="text-xl font-bold lg:pl-6">Commercial</h1>
+      <p class="py-6 max-w-72 lg:max-w-md lg:pl-6 ">
         Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
         quasi. In deleniti eaque aut repudiandae et a id nisi.
       </p>
@@ -288,7 +288,7 @@ modern sophistication, featuring weathered wood, sleek metal accents.
   </div>
 </div>
               </div>
-              <div class="bg-white container mx-auto mt-5 rounded-3xl lg:max-w-96">
+              <div class="bg-white container mx-auto  mt-5 lg:mt-0 rounded-3xl w-96 lg:max-w-96 ">
                 <img src="assets/img2.png" 
                 class="max-w-sm rounded-lg mx-auto p-5">
 
