layou-problem-solve

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ modern sophistication, featuring weathered wood, sleek metal accents.
               </div>
               <div class="bg-white container mx-auto  mt-5 lg:mt-0 rounded-3xl lg:max-w-96 ">
                 <img src="assets/img2.png" 
-                class="max-w-sm rounded-lg mx-auto p-5">
+                class="max-w-72 rounded-lg mx-auto p-5">
 
               </div>
             </div>
