--- a/index.html
+++ b/index.html
@@ -338,10 +338,80 @@ modern sophistication, featuring weathered wood, sleek metal accents.
           </div>
        
       </section>
+      <section class="container mx-auto">
+         <div>
+           <div class="flex justify-center lg:pt-20  ">
+      <button class="btn rounded-2xl  mt-7 "><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 inline">
+  <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+</svg>
+ Rinterio News</button>
+ </div>
+          <div>
+            <h2 class="text-2xl font-extrabold text-center py-4 lg:text-4xl">Read Our Article and News</h2>
+            <p class="text-center">The barn house captivates with its blend of rustic charm and  modern sophistication, featuring weathered wood, sleek metal accents.</p>
+          </div>
+          <div class=" grid lg:grid-cols-3">
+            <div class="flex justify-center pt-6">
+              <div class="card bg-base-100 w-96 shadow-sm">
+  <figure>
+    <img class="pt-4"
+      src="assets/article1.png"
+      alt="Shoes" />
+  </figure>
+  <div class="card-body">
+    <h2 class="card-title">How to choose the furniture right  of your home.</h2>
+    <p>The barn house captivates with its blend of rustic charm and modern. </p>
+    <div class="card-actions ">
+      <button class="btn rounded-lg ">Read More <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 bg-[#ABEF5F] p-1 rounded-3xl inline">
+  <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+</svg></button>
+    </div>
+  </div>
+</div>
+            </div>
+            <div class="flex justify-center pt-6">
+              <div class="card bg-base-100 w-96 shadow-sm">
+  <figure>
+    <img class="pt-4"
+      src="assets/article2.png"
+      alt="Shoes" />
+  </figure>
+  <div class="card-body">
+    <h2 class="card-title">How to choose the furniture right  of your home.</h2>
+    <p>The barn house captivates with its blend of rustic charm and modern. </p>
+    <div class="card-actions ">
+      <button class="btn rounded-lg ">Read More <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 bg-[#ABEF5F] p-1 rounded-3xl inline">
+  <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+</svg></button>
+    </div>
+  </div>
+</div>
+            </div>
+            <div class="flex justify-center pt-6">
+              <div class="card bg-base-100 w-96 shadow-sm">
+  <figure>
+    <img class="pt-4"
+      src="assets/article3.png"
+      alt="Shoes" />
+  </figure>
+  <div class="card-body">
+    <h2 class="card-title">How to choose the furniture right  of your home.</h2>
+    <p>The barn house captivates with its blend of rustic charm and modern. </p>
+    <div class="card-actions ">
+      <button class="btn rounded-lg ">Read More <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 bg-[#ABEF5F] p-1 rounded-3xl inline">
+  <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+</svg></button>
+    </div>
+  </div>
+</div>
+            </div>
+          </div>
+         </div> 
+      </section>
       
     </main>
     <footer>
 
-    </footer>
+    </footer>                                                              
 </body>
 </html>
