next project added

--- a/index.html
+++ b/index.html
@@ -408,6 +408,42 @@ modern sophistication, featuring weathered wood, sleek metal accents.
           </div>
          </div> 
       </section>
+      <section class="container mx-auto">
+        <div>
+       <div class="flex justify-center lg:pt-20  ">
+      <button class="btn rounded-2xl  mt-7 "><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 inline">
+  <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+</svg>
+ Let’s Connect</button>
+ </div>
+        <div>
+          <h2 class="text-center text-2xl font-extrabold py-4">Let’s Discuss Next Project</h2>
+          <p class="text-center">The barn house captivates with its blend of rustic charm and  modern sophistication, featuring weathered wood, sleek metal accents.</p>
+        </div>
+        <div>
+          <div>
+          <div class="grid place-items-center pb-5">
+            <input class="w-80 h-11 rounded-xl" type="text" placeholder="First Name">
+          </div>
+          <div class="grid place-items-center pb-5">
+            <input class="w-80 h-11 rounded-xl" type="text" placeholder="Latest Name">
+          </div>
+          </div>
+
+
+          <div>
+          <div class="grid place-items-center pb-5">
+            <input class="w-80 h-11 rounded-xl" type="text" placeholder="Phone Number">
+          </div>
+          <div class="grid place-items-center pb-5">
+            <input class="w-80 h-11 rounded-xl" type="text" placeholder="Email Address">
+          </div>
+          </div>
+
+        </div>
+
+ </div>
+      </section>
       
     </main>
     <footer>
