--- a/index.html
+++ b/index.html
@@ -350,11 +350,11 @@ modern sophistication, featuring weathered wood, sleek metal accents.
             <h2 class="text-2xl font-extrabold text-center py-4 lg:text-4xl">Read Our Article and News</h2>
             <p class="text-center">The barn house captivates with its blend of rustic charm and  modern sophistication, featuring weathered wood, sleek metal accents.</p>
           </div>
-          <div class=" grid lg:grid-cols-3">
+          <div class=" grid lg:grid-cols-3">  
             <div class="flex justify-center pt-6">
-              <div class="card bg-base-100 w-96 shadow-sm">
+              <div class="card bg-base-100 w-80 shadow-sm">
   <figure>
-    <img class="pt-4"
+    <img class="pt-4 w-72"
       src="assets/article1.png"
       alt="Shoes" />
   </figure>
@@ -370,9 +370,9 @@ modern sophistication, featuring weathered wood, sleek metal accents.
 </div>
             </div>
             <div class="flex justify-center pt-6">
-              <div class="card bg-base-100 w-96 shadow-sm">
+              <div class="card bg-base-100 w-80 shadow-sm">
   <figure>
-    <img class="pt-4"
+    <img class="pt-4 w-72"
       src="assets/article2.png"
       alt="Shoes" />
   </figure>
@@ -388,9 +388,9 @@ modern sophistication, featuring weathered wood, sleek metal accents.
 </div>
             </div>
             <div class="flex justify-center pt-6">
-              <div class="card bg-base-100 w-96 shadow-sm">
+              <div class="card bg-base-100 w-80 shadow-sm">
   <figure>
-    <img class="pt-4"
+    <img class="pt-4 w-72"
       src="assets/article3.png"
       alt="Shoes" />
   </figure>
@@ -420,24 +420,34 @@ modern sophistication, featuring weathered wood, sleek metal accents.
           <h2 class="text-center text-2xl font-extrabold py-4">Let’s Discuss Next Project</h2>
           <p class="text-center">The barn house captivates with its blend of rustic charm and  modern sophistication, featuring weathered wood, sleek metal accents.</p>
         </div>
-        <div>
-          <div>
-          <div class="grid place-items-center pb-5">
-            <input class="w-80 h-11 rounded-xl" type="text" placeholder="First Name">
+        <div class="lg:mt-5">
+          <div class=" lg:justify-center  lg:flex ">
+          <div class="grid place-items-center pb-5  lg:pr-6">
+            <input class="w-64 h-11 rounded-xl" type="text" placeholder="First Name">
           </div>
           <div class="grid place-items-center pb-5">
-            <input class="w-80 h-11 rounded-xl" type="text" placeholder="Latest Name">
+            <input class="w-64 h-11 rounded-xl" type="text" placeholder="Latest Name">
           </div>
           </div>
 
 
+          <div class=" lg:justify-center  lg:flex">
+          <div class="grid place-items-center pb-5 lg:pr-6">
+            <input class="w-64 h-11 rounded-xl" type="text" placeholder="Phone Number">
+          </div>
+          <div class="grid place-items-center pb-5">
+            <input class="w-64 h-11 rounded-xl" type="text" placeholder="Email Address">
+          </div>
+          </div>
+          <div class="grid place-items-center">
+            <textarea class="textarea w-64 lg:w-[520px] rounded-xl" placeholder="Write your message here"></textarea>
+          </div>
           <div>
-          <div class="grid place-items-center pb-5">
-            <input class="w-80 h-11 rounded-xl" type="text" placeholder="Phone Number">
-          </div>
-          <div class="grid place-items-center pb-5">
-            <input class="w-80 h-11 rounded-xl" type="text" placeholder="Email Address">
-          </div>
+            <div class="flex justify-center mt-5 lg:mt-8">
+                <button class="bg-[#cbfc93] px-20 py-3 rounded-3xl">Send Mail <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 bg-[#ABEF5F] p-1 rounded-3xl inline">
+  <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+</svg></button>
+            </div>
           </div>
 
         </div>
