--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ modern sophistication, featuring weathered wood, sleek metal accents.
           </div>
         </div>
       </section>
-      <section class="bg-[#fff0f7]  ">
+      <section class="bg-[#fff0f7] lg:pb-14 ">
         <div class="container mx-auto">
            <div class="flex justify-center lg:pt-20  ">
       <button class="btn rounded-2xl  mt-7 "><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 inline">
@@ -325,7 +325,7 @@ modern sophistication, featuring weathered wood, sleek metal accents.
   </div>
 </div>
               </div>
-             <div class="bg-white container mx-auto  mt-5 lg:mt-0 rounded-3xl lg:max-w-64 lg:mr-5">
+             <div class="bg-white container mx-auto  mt-5 lg:mt-0 rounded-3xl lg:max-w-64 lg:mr-5 ">
                 <img src="assets/img5.png" 
                 class="max-w-sm rounded-lg mx-auto p-3">
 
@@ -456,8 +456,29 @@ modern sophistication, featuring weathered wood, sleek metal accents.
       </section>
       
     </main>
-    <footer>
-
-    </footer>                                                              
+   <footer class="bg-black mt-8">
+    <div class="grid place-items-center pt-16">
+     <a class=" pb-5 lg:text-xl text-white font-extrabold "><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 bg-[#ABEF5F] p-1 rounded-3xl inline">
+  <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+</svg>
+  Rinterio</a>
+  <p class="text-white text-center">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+    </div>
+      <div class="py-8">
+        <ul class="text-white grid grid-cols-1 place-items-center  lg:grid-cols-5 gap-8">
+        <a href="">Home</a>
+        <a href="">Services</a>
+        <a href="">Portfolio</a>
+        <a href="">Blogs</a>
+        <a href="">Contract Us</a>
+       </ul>
+        
+      </div>
+       <div class="flex justify-center mt-5 lg:mt-8 pb-16">
+                <button class="bg-[#cbfc93] px-20 py-3 rounded-3xl">Book Now <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 bg-[#ABEF5F] p-1 rounded-3xl inline">
+  <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+</svg></button>
+            </div>
+   </footer>                                                            
 </body>
 </html>
